--- a/CRUD/pom.xml
+++ b/CRUD/pom.xml
@@ -26,6 +26,13 @@
       <version>4.0.1</version>
       <scope>provided</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/javax.servlet/jstl -->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
+    </dependency>
+
 
     <!-- Spring MVC -->
     <dependency>
@@ -70,6 +77,23 @@
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.28</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+      <version>2.0.1.Final</version> <!-- Используйте актуальную версию -->
+    </dependency>
+
+   <!-- <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context-support</artifactId>
+      <version>5.3.10</version> &lt;!&ndash; Используйте актуальную версию &ndash;&gt;
+    </dependency>
+-->
   </dependencies>
 
   <build>
