--- a/CRUD/src/main/resources/.properties
+++ b/CRUD/src/main/resources/.properties
@@ -4,4 +4,5 @@ db.password=SECRET
 db.url=jdbc:mysql://localhost:3306/example
 
 hibernate.show_sql=true
-hibernate.hbm2ddl.auto=update
+hibernate.hbm2ddl.auto=create
+//hibernate.hbm2ddl.auto=update
